# magnum-playground

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md
3rd/: CMakeLists.txt
src/: imconfig.h  main.cpp  playground.cpp  playground.h
